@@ -1,3 +1,8 @@
+2006-06-29  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tkcon.tcl: updated to handle ttk scrollbars as well as other UI
+	cleanup.
+
 2006-06-15  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tkcon.tcl: modify CVS location after SF changes
